enrique_jimenez/session-01/exercise-01/mariadb-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
    exercise: "01"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
          - containerPort: 3306
            name: mysql
