enrique_jimenez/session-01/exercise-01/wordpress-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
    exercise: "01"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:latest
        ports:
          - containerPort: 80
            name: http
