enrique_jimenez/session-01/exercise-01/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    exercise: "01"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
