enrique_jimenez/session-01/exercise-01/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: exercise-01
spec:
  rules:
  - host: wordpress-exercise-01.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
